--- a/src/Components/Home/Footer.module.scss
+++ b/src/Components/Home/Footer.module.scss
@@ -80,6 +80,17 @@
       background-color: orangered;
     }
   }
+  &__copy {
+    margin-top: 3rem;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.3);
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    padding-top: 2rem;
+    h1,
+    h2 {
+      font-weight: 400;
+    }
+  }
 }
 .row-4 {
   display: grid;
